<resources>

    <string name="app_name">因为我爱你</string>
    <string name="all_task">全部任务</string>
    <string name="task">任务</string>
    <string name="record">记录</string>
    <string name="square">广场</string>
    <string name="settings">设置</string>
    <string name="history">历史</string>
    <string name="share">分享</string>
    <string name="todo_today" formatted="false">当日任务 Day %d/21</string>
    <string name="todo_hint">当日任务</string>
    <string name="day_fmt" formatted="false">Day %d / 21</string>
    <string name="day_pfmt" formatted="false">Day %d</string>
    <string name="done_today">记得交任务哦~</string>
    <string name="submit">提交</string>
    <string name="feedback">反馈信息</string>
    <string name="record_today">记录今天</string>
    <string name="record_emotion">心情参数</string>
    <string name="record_task">任务记录</string>
    <string name="record_e1">好心情</string>
    <string name="record_e2">有运动</string>
    <string name="record_e3">水果蔬菜</string>
    <string name="record_e4">有读书</string>
    <string name="record_e5">为理想而战</string>
    <string name="record_e6">坚持理想</string>
    <string name="record_e7">提交任务</string>
    <string name="no_connection">没有网络连接，赶紧去检查一下哦~</string>
    <string name="sync_weibo">同步到微博&#064;大猫喜欢你</string>
    <string name="history_record">历史记录</string>
    <string name="system_settings">系统设置</string>
    <string name="set_hint">提醒设置</string>
    <string name="set_feedback">意见和反馈</string>
    <string name="set_share">分享给朋友</string>
    <string name="set_favapp">给APP打分</string>
    <string name="set_about">关于我们</string>
    <string name="set_weibo">绑定微博</string>
    <string name="set_desc_hint" formatted="false">点击设置提醒时间 %s </string>
    <string name="set_desc_feedback">欢迎提交bug 或 新任务建议</string>
    <string name="set_desc_share">^(oo)^ 笑眯眯多谢~</string>
    <string name="set_desc_favapp">您的评论，能决定APP的传播</string>
    <string name="set_desc_about">想做个温暖的APP，因为我爱你~</string>
    <string name="set_desc_weibo">可以分享自己的心情哦~</string>
    <string name="hint_task">因为我爱你~任务提醒~</string>
    <string name="ground">已提交任务</string>
    <string name="task_detail">某人作业</string>
    <string name="send_picture">发送图片</string>
    <string name="contact_us">联系我们</string>
    <string name="start">马上尝试一下哦~</string>
    <string name="record_hint">写点什么吧~</string>
    <string name="not_arrived">这一天还没有到哦~</string>
    <string name="loading">正在加载，请稍候...</string>
    <string name="from_camera">拍照</string>
    <string name="from_gallery">选取相册</string>
    <string name="cancel">取消</string>
    <string name="remove_photo">移除图片</string>
    <string name="feedback_uploaded">您的反馈已经提交了哦，感谢您的支持~</string>
    <string name="feedback_empty">先写点什么吧~</string>
    <string name="token_error">未能与新浪微博建立联系，请稍后再试~</string>
    <string name="image_method">图片选择</string>
    <string name="last_at">大猫喜欢你</string>
    <string name="input_hint">大猫米有钱买服务器&gt;_&lt;\n所有内容提交在@大猫喜欢你 \n若取消『同步微博』就发不成了…\n提交不需要你微博帐号，请安心～\n\n文本内容，140字内。\n发送图片可以加分，恩。</string>
    <string name="no_ground">悲剧了…『广场』无法同步作业数据…\n大猫和程序猿，抱头痛哭::&gt;_&lt;::\n原因也许是：没有网络，外星人入侵…\n我们会努力改进…</string>
    <string name="share_title">分享一个好玩APP</string>
    <string name="share_text">有个猪头做了『因为我爱你』APP，很好玩～下载地址是 http://rarnu.7thgen.info/lovingyou/app/LovingYou_1.0.apk</string>
    <string name="about_belong">APP 属于：<font color="blue">@大猫布丁</font></string>
    <string name="about_mail">邮件联络：zoelee0420@gmail.com</string>
    <string name="about_disclaimer">免责声明</string>
    <string name="no_market">居然没有在你的手机里找到市场软件，先安装一个吧~</string>

</resources>