<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="184dip"
    android:layout_height="wrap_content"
    android:background="#00000000" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FF000000"
        android:layout_margin="16dip"
        android:padding="16dip" >

        <TextView
            android:id="@+id/tvMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_method" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="120dip"
            android:layout_height="48dip"
            android:layout_below="@+id/tvMethod"
            android:layout_marginTop="8dip"
            android:background="#FF999999"
            android:text="@string/from_camera"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="120dip"
            android:layout_height="48dip"
            android:layout_below="@+id/btnCamera"
            android:layout_marginTop="8dip"
            android:background="#FF999999"
            android:text="@string/from_gallery"
            android:textColor="@color/black" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="36dip"
        android:layout_height="36dip"
        android:layout_alignParentRight="true"
        android:src="@drawable/close" />

</RelativeLayout>