<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bk" />

    <com.rarnu.zoe.love2.comp.Title
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="56dip" />

    <RelativeLayout
        android:id="@+id/laySet1"
        android:layout_width="fill_parent"
        android:layout_height="64dip"
        android:layout_below="@+id/title"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >

        <ImageView
            android:id="@+id/icoSet1"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_marginTop="8dip"
            android:contentDescription="@null"
            android:src="@drawable/set_hint" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dip"
            android:layout_toRightOf="@+id/icoSet1"
            android:background="#FF666666" />

        <ImageView
            android:id="@+id/chkHint"
            android:layout_width="36dip"
            android:layout_height="36dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:focusable="true"
            android:src="@drawable/check_yes" />

        <TextView
            android:id="@+id/tvSet1"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_marginLeft="16dip"
            android:layout_marginTop="8dip"
            android:layout_toLeftOf="@+id/chkHint"
            android:layout_toRightOf="@+id/icoSet1"
            android:gravity="left|center_vertical"
            android:text="@string/set_hint"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/tvSetDesc1"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_below="@+id/tvSet1"
            android:layout_marginLeft="40dip"
            android:layout_toLeftOf="@+id/chkHint"
            android:layout_toRightOf="@+id/icoSet1"
            android:gravity="left|center_vertical"
            android:text="@string/set_desc_hint"
            android:textColor="#FF666666" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/laySetWeibo"
        android:layout_width="fill_parent"
        android:layout_height="64dip"
        android:layout_below="@+id/laySet1"
        android:paddingLeft="16dip"
        android:paddingRight="16dip"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/icoSetWeibo"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_marginTop="8dip"
            android:contentDescription="@null"
            android:src="@drawable/weibo" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dip"
            android:layout_toRightOf="@+id/icoSetWeibo"
            android:background="#FF666666" />

        <TextView
            android:id="@+id/tvSetWeibo"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_marginLeft="16dip"
            android:layout_marginTop="8dip"
            android:layout_toRightOf="@+id/icoSetWeibo"
            android:gravity="left|center_vertical"
            android:text="@string/set_weibo"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/tvSetDescWeibo"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_below="@+id/tvSetWeibo"
            android:layout_marginLeft="40dip"
            android:layout_toRightOf="@+id/icoSetWeibo"
            android:gravity="left|center_vertical"
            android:text="@string/set_desc_weibo"
            android:textColor="#FF666666" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/laySet2"
        android:layout_width="fill_parent"
        android:layout_height="64dip"
        android:layout_below="@+id/laySet1"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >

        <ImageView
            android:id="@+id/icoSet2"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_marginTop="8dip"
            android:contentDescription="@null"
            android:src="@drawable/set_mail" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dip"
            android:layout_toRightOf="@+id/icoSet2"
            android:background="#FF666666" />

        <TextView
            android:id="@+id/tvSet2"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_marginLeft="16dip"
            android:layout_marginTop="8dip"
            android:layout_toRightOf="@+id/icoSet2"
            android:gravity="left|center_vertical"
            android:text="@string/set_feedback"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/tvSetDesc2"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_below="@+id/tvSet2"
            android:layout_marginLeft="40dip"
            android:layout_toRightOf="@+id/icoSet2"
            android:gravity="left|center_vertical"
            android:text="@string/set_desc_feedback"
            android:textColor="#FF666666" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/laySet3"
        android:layout_width="fill_parent"
        android:layout_height="64dip"
        android:layout_below="@+id/laySet2"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >

        <ImageView
            android:id="@+id/icoSet3"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_marginTop="8dip"
            android:contentDescription="@null"
            android:src="@drawable/share" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dip"
            android:layout_toRightOf="@+id/icoSet3"
            android:background="#FF666666" />

        <TextView
            android:id="@+id/tvSet3"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_marginLeft="16dip"
            android:layout_marginTop="8dip"
            android:layout_toRightOf="@+id/icoSet3"
            android:gravity="left|center_vertical"
            android:text="@string/set_share"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/tvSetDesc3"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_below="@+id/tvSet3"
            android:layout_marginLeft="40dip"
            android:layout_toRightOf="@+id/icoSet3"
            android:gravity="left|center_vertical"
            android:text="@string/set_desc_share"
            android:textColor="#FF666666" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/laySet4"
        android:layout_width="fill_parent"
        android:layout_height="64dip"
        android:layout_below="@+id/laySet3"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >

        <ImageView
            android:id="@+id/icoSet4"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_marginTop="8dip"
            android:contentDescription="@null"
            android:src="@drawable/set_fav" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dip"
            android:layout_toRightOf="@+id/icoSet4"
            android:background="#FF666666" />

        <TextView
            android:id="@+id/tvSet4"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_marginLeft="16dip"
            android:layout_marginTop="8dip"
            android:layout_toRightOf="@+id/icoSet4"
            android:gravity="left|center_vertical"
            android:text="@string/set_favapp"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/tvSetDesc4"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_below="@+id/tvSet4"
            android:layout_marginLeft="40dip"
            android:layout_toRightOf="@+id/icoSet4"
            android:gravity="left|center_vertical"
            android:text="@string/set_desc_favapp"
            android:textColor="#FF666666" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/laySet5"
        android:layout_width="fill_parent"
        android:layout_height="64dip"
        android:layout_below="@+id/laySet4"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >

        <ImageView
            android:id="@+id/icoSet5"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_marginTop="8dip"
            android:contentDescription="@null"
            android:src="@drawable/set_about" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dip"
            android:layout_toRightOf="@+id/icoSet5"
            android:background="#FF666666" />

        <TextView
            android:id="@+id/tvSet5"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_marginLeft="16dip"
            android:layout_marginTop="8dip"
            android:layout_toRightOf="@+id/icoSet5"
            android:gravity="left|center_vertical"
            android:text="@string/set_about"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/tvSetDesc5"
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:layout_below="@+id/tvSet5"
            android:layout_marginLeft="40dip"
            android:layout_toRightOf="@+id/icoSet5"
            android:gravity="left|center_vertical"
            android:text="@string/set_desc_about"
            android:textColor="#FF666666" />
    </RelativeLayout>

</RelativeLayout>