<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bk" />

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="48dip"
        android:layout_height="48dip"
        android:layout_marginLeft="8dip"
        android:layout_marginTop="8dip"
        android:contentDescription="@null"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvBelong"
        android:layout_width="fill_parent"
        android:layout_height="24dip"
        android:layout_marginLeft="8dip"
        android:layout_marginTop="8dip"
        android:layout_toRightOf="@+id/imgIcon"
        android:gravity="left|center_vertical"
        android:text="@string/about_belong"
        android:textColor="#FF999999" />

    <TextView
        android:id="@+id/tvMail"
        android:layout_width="fill_parent"
        android:layout_height="24dip"
        android:layout_below="@+id/tvBelong"
        android:layout_marginLeft="8dip"
        android:layout_toRightOf="@+id/imgIcon"
        android:autoLink="email"
        android:gravity="left|center_vertical"
        android:text="@string/about_mail"
        android:textColor="#FF999999" />

    <TextView
        android:id="@+id/tvSpl"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/tvMail"
        android:layout_marginTop="8dip"
        android:background="#FF999999" />

    <ScrollView
        android:id="@+id/svAbout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tvSpl"
        android:padding="8dip"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:lineSpacingMultiplier="1.5"
                android:textColor="#FF999999"
                android:textSize="14dip" />

            <TextView
                android:id="@+id/tvSplDisclaimer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAbout"
                android:layout_marginTop="32dip"
                android:background="#FF666666"
                android:padding="4dip"
                android:text="@string/about_disclaimer"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvDisclaimer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSplDisclaimer"
                android:lineSpacingMultiplier="1.5"
                android:textColor="#FF999999"
                android:textSize="14dip" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>