<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bk" />

    <com.rarnu.zoe.love2.comp.Title
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="64dip" />

    <TextView
        android:id="@+id/tvRecordDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginTop="8dip"
        android:textColor="#FF999999" />

    <RelativeLayout
        android:id="@+id/layText"
        android:layout_width="fill_parent"
        android:layout_height="240dip"
        android:layout_below="@+id/tvRecordDesc"
        android:layout_margin="8dip" >

        <ImageView
            android:id="@+id/imgTextBackground"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/bk_record"
            android:contentDescription="@null"
            android:scaleType="center" />

        <TextView
            android:id="@+id/tvEmotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dip"
            android:layout_marginTop="4dip"
            android:text="@string/record_emotion"
            android:textColor="#FF999999" />

        <TextView
            android:id="@+id/tvMiddle"
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-12dip"
            android:layout_marginTop="4dip"
            android:layout_toRightOf="@+id/tvMiddle"
            android:text="@string/record_task"
            android:textColor="#FF999999" />

        <RelativeLayout
            android:id="@+id/layRecordEmotion"
            android:layout_width="100dip"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dip"
            android:layout_marginRight="4dip"
            android:layout_marginTop="32dip" >

            <TextView
                android:id="@+id/tvE1"
                android:layout_width="wrap_content"
                android:layout_height="36dip"
                android:layout_marginRight="8dip"
                android:layout_toLeftOf="@+id/chkE1"
                android:gravity="right|center_vertical"
                android:text="@string/record_e1"
                android:textColor="#FF999999"
                android:textSize="12dip" />

            <TextView
                android:id="@+id/tvE2"
                android:layout_width="wrap_content"
                android:layout_height="36dip"
                android:layout_below="@+id/tvE1"
                android:layout_marginRight="8dip"
                android:layout_marginTop="4dip"
                android:layout_toLeftOf="@+id/chkE2"
                android:gravity="right|center_vertical"
                android:text="@string/record_e2"
                android:textColor="#FF999999"
                android:textSize="12dip" />

            <TextView
                android:id="@+id/tvE3"
                android:layout_width="wrap_content"
                android:layout_height="36dip"
                android:layout_below="@+id/tvE2"
                android:layout_marginRight="8dip"
                android:layout_marginTop="4dip"
                android:layout_toLeftOf="@+id/chkE3"
                android:gravity="right|center_vertical"
                android:text="@string/record_e3"
                android:textColor="#FF999999"
                android:textSize="12dip" />

            <TextView
                android:id="@+id/tvE4"
                android:layout_width="wrap_content"
                android:layout_height="36dip"
                android:layout_below="@+id/tvE3"
                android:layout_marginRight="8dip"
                android:layout_marginTop="4dip"
                android:layout_toLeftOf="@+id/chkE4"
                android:gravity="right|center_vertical"
                android:text="@string/record_e4"
                android:textColor="#FF999999"
                android:textSize="12dip" />

            <TextView
                android:id="@+id/tvE5"
                android:layout_width="wrap_content"
                android:layout_height="36dip"
                android:layout_below="@+id/tvE4"
                android:layout_marginRight="8dip"
                android:layout_marginTop="4dip"
                android:layout_toLeftOf="@+id/chkE5"
                android:gravity="right|center_vertical"
                android:text="@string/record_e5"
                android:textColor="#FF999999"
                android:textSize="12dip" />

            <com.rarnu.zoe.love2.comp.Checker
                android:id="@+id/chkE1"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_alignParentRight="true"
                android:layout_marginTop="2dip" />

            <com.rarnu.zoe.love2.comp.Checker
                android:id="@+id/chkE2"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/chkE1"
                android:layout_marginTop="8dip" />

            <com.rarnu.zoe.love2.comp.Checker
                android:id="@+id/chkE3"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/chkE2"
                android:layout_marginTop="8dip" />

            <com.rarnu.zoe.love2.comp.Checker
                android:id="@+id/chkE4"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/chkE3"
                android:layout_marginTop="8dip" />

            <com.rarnu.zoe.love2.comp.Checker
                android:id="@+id/chkE5"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/chkE4"
                android:layout_marginTop="8dip" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layRecordTask"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="-8dip"
            android:layout_marginTop="32dip"
            android:layout_toLeftOf="@+id/layRecordEmotion" >

            <EditText
                android:id="@+id/etRecord"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="36dip"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/record_frame"
                android:gravity="left|top"
                android:padding="2dip"
                android:textColor="#FF999999" />

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="32dip"
                android:layout_height="24dip"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="12dip"
                android:background="@drawable/record_weibo1" />

            <ImageView
                android:id="@+id/imgGroup"
                android:layout_width="32dip"
                android:layout_height="24dip"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="12dip"
                android:layout_toRightOf="@+id/imgPhoto"
                android:background="@drawable/record_weibo2" />

            <ImageView
                android:id="@+id/chkWeibo"
                android:layout_width="24dip"
                android:layout_height="24dip"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="12dip"
                android:layout_toRightOf="@+id/imgGroup"
                android:background="@drawable/check_yes" />

            <TextView
                android:id="@+id/tvSyncWeibo"
                android:layout_width="wrap_content"
                android:layout_height="28dip"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="4dip"
                android:layout_toRightOf="@+id/chkWeibo"
                android:gravity="center"
                android:text="@string/sync_weibo"
                android:textSize="12dip" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="120dip"
        android:layout_height="32dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/layText"
        android:layout_marginRight="16dip"
        android:background="@drawable/record_submit" />

    <RelativeLayout
        android:id="@+id/layRuler"
        android:layout_width="fill_parent"
        android:layout_height="32dip"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:id="@+id/layLines"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/layBottomLine" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layBottomLine"
            android:layout_width="fill_parent"
            android:layout_height="12dip"
            android:layout_alignParentBottom="true"
            android:background="#FF666666" />

        <ImageView
            android:id="@+id/imgBall"
            android:layout_width="12dip"
            android:layout_height="12dip"
            android:background="@drawable/record_ball"
            android:contentDescription="@null" />
    </RelativeLayout>

</RelativeLayout>